# Roughcut

./: .dockerignore  .env.example  .gitignore  AGENTS.md  PROJECT_CONTEXT.md  PROJECT_TREE.md  README.md  compose.yaml
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: config.py  db.py  main.py  schemas.py  worker.py
backend/app/routers/: __init__.py  downloads.py  health.py  jobs.py  presets.py  projects.py  settings.py
backend/app/services/: __init__.py  candidates.py  jobs.py  llm.py  media.py  planner.py  presets.py  repository.py  storage.py  tracing.py  transcription.py
backend/app/utils/: __init__.py  serialization.py
backend/tests/: test_audio_modes.py  test_candidate_export_render.py  test_candidate_planner_scoring.py  test_candidate_segmentation.py  test_llm.py  test_manifest_serialization.py  test_planner_fallback.py  test_render_captions.py  test_trace_logging.py
config/: presets.example.json
frontend/: Dockerfile  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/components/layout/: app-shell.tsx  page-header.tsx
frontend/src/components/project/: candidate-list.tsx  clip-style-editor.tsx  file-list.tsx  generate-panel.tsx  job-feed.tsx  job-inspector.tsx  job-trace-panel.tsx  media-preview.tsx  upload-dropzone.tsx
frontend/src/components/projects/: project-card.tsx
frontend/src/components/settings/: settings-form.tsx
frontend/src/lib/: api.ts  clip-style.ts  format.ts  types.ts
(+18 files in other folders)
